testing the push

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <div id="sidenav">
-        <a href="/barahi_tshirt/index.html" id="barahi">Barahi</a>
-        <a href="/clock/clockapp.html" id="clock">Clock</a>
-        <a href="/expense_tracker/expense.html" id="expense">Expense</a>
-        <a href="/form/index.html" id="form">Form</a>
-        <a href="/guessing_game/g_game.html" id="guessing">No.Guessing</a>
-        <a href="/Handicraft/index.html" id="handicraft">Handicraft</a>
-        <a href="/inv/index.html" id="inv">Inv</a>
-        <a href="/multiplication_table/index.html" id="mul">Mul.Table</a>
-        <a href="/photography/index.html" id="photo">Photography</a>
-        <a href="/portfolio/index.html" id="portfolio">Portfolio</a>
-        <a href="/quiz/quiz.html" id="quiz">Quiz</a>
-        <a href="/quote/index.html" id="quote">Quote</a>
-        <a href="/to_do/index.html" id="todo">To-Do</a>
+        <a href="pages/barahi_tshirt/index.html" id="barahi">Barahi</a>
+        <a href="pages/clock/clockapp.html" id="clock">Clock</a>
+        <a href="pages/expense_tracker/expense.html" id="expense">Expense</a>
+        <a href="pages/form/index.html" id="form">Form</a>
+        <a href="pages/guessing_game/g_game.html" id="guessing">No.Guessing</a>
+        <a href="pages/Handicraft/index.html" id="handicraft">Handicraft</a>
+        <a href="pages/inv/index.html" id="inv">Inv</a>
+        <a href="pages/multiplication_table/index.html" id="mul">Mul.Table</a>
+        <a href="pages/photography/index.html" id="photo">Photography</a>
+        <a href="pages/portfolio/index.html" id="portfolio">Portfolio</a>
+        <a href="pages/quiz/quiz.html" id="quiz">Quiz</a>
+        <a href="pages/quote/index.html" id="quote">Quote</a>
+        <a href="pages/to_do/index.html" id="todo">To-Do</a>
     </div>
 </body>
 <script src="script.js"></script>
