--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All in one</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <img src="girl.jpg">
     <div id="sidenav">
         <a href="pages/barahi_tshirt/index.html" id="barahi">Barahi</a>
         <a href="pages/clock/clockapp.html" id="clock">Clock</a>
@@ -24,4 +27,5 @@
     </div>
 </body>
 <script src="script.js"></script>
+
 </html>
