--- a/pages/clock/clockapp.html
+++ b/pages/clock/clockapp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Tourney&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
+    <h1>DIGITAL CLOCK</h1>
     <div class="clock-app">
         <!-- Vertical Icons -->
         <div class="icon-container">
@@ -51,5 +54,6 @@
     </div>
 
     <script src="clockapp.js"></script>
-    </body>
+</body>
+
 </html>
