--- a/pages/expense_tracker/expense.html
+++ b/pages/expense_tracker/expense.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="expense.css">
 </head>
 <body>
+    <div class="header">
+<h1>EXPENCE TRACKER</h1>
+    </div>
 
     <div class="expense-tracker">
         <h1>Track your day-to-day expenses</h1>
