--- a/pages/form/index.html
+++ b/pages/form/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Form Validation</h1>
     <div class="main-form">
         <Form id="mainform" onsubmit="return formValidate ()">
             <br>
