--- a/pages/to_do/index.html
+++ b/pages/to_do/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
+
 <body>
-    <div class="top">
     <nav>
         <div class="title">Arrange Your Day to Day Task</div>
         <button id="themeToggle">Change Appreance</button>
     </nav>
-    </div>
-    
+
+
+
     <div class="board">
         <div class="column" id="todo">
             <h2>To-Do</h2>
@@ -27,14 +29,14 @@
             <h2>Doing</h2>
             <div class="tasks" id="doing-tasks">
                 <input type="text" class="task-input" id="doing-input" placeholder="Add Your Task Here.">
-                <button class="add-task" onclick="addTask('doing')">Add Task</button>
+                <!-- <button class="add-task" onclick="addTask('doing')">Add Task</button> -->
             </div>
         </div>
         <div class="column" id="done">
             <h2>Done</h2>
             <div class="tasks" id="done-tasks">
                 <input type="text" class="task-input" id="done-input" placeholder="Add Your Task Here.">
-                <button class="add-task" onclick="addTask('done')">Add Task</button>
+                <!-- <button class="add-task" onclick="addTask('done')">Add Task</button> -->
             </div>
         </div>
     </div>
@@ -48,4 +50,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
